vlib/v/checker/tests/lock_already_rlocked.out
vlib/v/checker/tests/lock_already_rlocked.vv:11:3: error: nested `lock`/`rlock` not allowed
    9 |     }
   10 |     rlock a {
   11 |         lock a {
      |         ~~~~
   12 |             a.x++
   13 |         }
